Fix menu z-index

--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -16,7 +16,7 @@
   border-top: 0;
   background: #161616;
   position: absolute;
-  z-index: 1000;
+  z-index: 50;
   list-style: none;
   padding: 0;
   left: 0;
